fix crypto config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -32,6 +32,7 @@ akka {
 kafka.url = ${KAFKA_URL}
 
 play.crypto.secret = "changeme"
+play.crypto.secret = ${?CRYPTO_SECRET}
 
 play.i18n {
   langs = [ "en" ]
