trust all forward proxies

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -37,3 +37,5 @@ play.crypto.secret = ${?CRYPTO_SECRET}
 play.i18n {
   langs = [ "en" ]
 }
+
+play.http.forwarded.trustedProxies = ["0.0.0.0/0", "::/0"]
