--- a/conf/application.conf
+++ b/conf/application.conf
@@ -2,6 +2,7 @@
 
 akka {
   kafka.producer {
+    close-timeout = 60s
     kafka-clients {
       acks = "all"
       retries = 0
@@ -14,9 +15,16 @@ akka {
     }
   }
   kafka.consumer {
+    poll-interval = 50ms
+    poll-timeout = 50ms
+    stop-timeout = 30s
+    close-timeout = 20s
+    commit-timeout = 15s
+    wakeup-timeout = 5s
     kafka-clients {
       security.protocol = "SSL"
       ssl.client.auth = "required"
+      enable.auto.commit = true
     }
   }
 }
