--- a/conf/application.conf
+++ b/conf/application.conf
@@ -10,8 +10,6 @@ akka {
       linger.ms = 1
       buffer.memory = 33554432
       max.block.ms = 5000
-      security.protocol = "SSL"
-      ssl.client.auth = "required"
     }
   }
   kafka.consumer {
@@ -22,14 +20,12 @@ akka {
     commit-timeout = 15s
     wakeup-timeout = 5s
     kafka-clients {
-      security.protocol = "SSL"
-      ssl.client.auth = "required"
       enable.auto.commit = true
     }
   }
 }
 
-kafka.url = ${KAFKA_URL}
+kafka.url = ${?KAFKA_URL}
 
 play.crypto.secret = "changeme"
 play.crypto.secret = ${?CRYPTO_SECRET}
