support kafka prefix

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -30,12 +30,11 @@ akka {
 }
 
 kafka.url = ${KAFKA_URL}
+kafka.prefix = ${?KAFKA_PREFIX}
 
 play.crypto.secret = "changeme"
 play.crypto.secret = ${?CRYPTO_SECRET}
 
-play.i18n {
-  langs = [ "en" ]
-}
+play.i18n.langs = ["en"]
 
 play.http.forwarded.trustedProxies = ["0.0.0.0/0", "::/0"]
