--- a/conf/application.conf
+++ b/conf/application.conf
@@ -32,9 +32,11 @@ akka {
 kafka.url = ${KAFKA_URL}
 kafka.prefix = ${?KAFKA_PREFIX}
 
-play.crypto.secret = "changeme"
-play.crypto.secret = ${?CRYPTO_SECRET}
+play.http.secret.key = "changeme"
+play.http.secret.key = ${?CRYPTO_SECRET}
 
 play.i18n.langs = ["en"]
+
+play.filters.enabled = []
 
 play.http.forwarded.trustedProxies = ["0.0.0.0/0", "::/0"]
